--- a/app/views/invites/show.html.erb
+++ b/app/views/invites/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-6">
-        <div class="box">
+        <div class="box2">
           <p>
             <strong>チーム名</strong><br>
             <%= @invite.team.name %>
