--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-4">
-        <div class="box">
+        <div class="box2">
 
           <p>
             <strong>チーム名</strong><br>
