--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,8 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-6">
-        <%= link_to "チーム登録", new_team_path, class: "button is-info is-small" %><br><br>
-        <div class="box">
+        <%= link_to "チーム登録", new_team_path, class: "button is-info" %><br><br>
+        <div class="box2">
           <p>名前 : <%= @user.name %></p>
           <p>メールアドレス : <%= @user.email %></p><br><br>
           <p>チーム名 </p>
