User詳細画面の修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,20 @@ body {
     -2px  0px 1px black,
      0px -2px 1px black;
 }
+.second-title{
+  color: white;
+  font-size: 25px;
+  background-size:cover;
+  text-shadow    :
+     2px  2px 1px black,
+    -2px  2px 1px black,
+     2px -2px 1px black,
+    -2px -2px 1px black,
+     2px  0px 1px black,
+     0px  2px 1px black,
+    -2px  0px 1px black,
+     0px -2px 1px black;
+}
 a {
   color: blue;
   text-decoration: none;
