--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,16 @@
-<div class="title has-text-centered pt-6">
-  <h1>プロフィール</h1>
-</div>
 <section class="section">
   <div class="container">
+
+
     <div class="columns is-centered">
-      <div class="column is-6">
-        <%= link_to "チーム登録", new_team_path, class: "button is-info" %><br><br>
+      <div class="column is-6 is-offset-1">
+        <div class="second-title has-text-centered pb-3">
+          <h1>プロフィール</h1>
+        </div>
         <div class="box2">
           <p>名前 : <%= @user.name %></p>
-          <p>メールアドレス : <%= @user.email %></p><br><br>
+          <p>メールアドレス : <%= @user.email %></p><br>
+          <%= link_to "チーム登録", new_team_path, class: "button is-info is-small" %>
           <p>チーム名 </p>
           <% if @user.teams.empty? %>
             <%= "現在登録されたチームはありません" %>
@@ -24,6 +26,27 @@
             <%= link_to "メッセージ一覧", conversations_path, class: "button is-success is-light is-outlined" %>
           </div>
         </div>
+      </div>
+
+      <div class="column is-4 is-offset-1">
+
+        <div class="second-title has-text-centered pb-3">
+          <h1>募集履歴</h1>
+        </div>
+        <% @invites.each do |invite| %>
+            <div class="box">
+              <p>チーム名 : <%= invite.team.name %></P>
+              <p>希望開始日時 : <%= invite.match_day.strftime('%Y/%m/%d %H:%M') %></P>
+              <p>会場 : <%= invite.place %></P>
+              <% if invite.status == true %>
+                <p>募集状況 : 募集中 </p>
+              <% else %>
+                <p>募集状況 : 募集終了 </p>
+              <% end %>
+                  <%= link_to '募集編集', edit_invite_path(invite.id) %>
+            </div>
+        <% end %>
+      </div>
       </div>
     </div>
   </div>
