--- a/app/views/invites/index.html.erb
+++ b/app/views/invites/index.html.erb
@@ -45,6 +45,11 @@
           </div>
         </div>
       </div>
+      <div class="columns is-centered">
+        <div class="column is-6">
+          <%= paginate @invites %>
+        </div>
+      </div>
     </div>
   </section>
 </div>
