--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
         </div>
         <div class="navbar-end">
           <% if user_signed_in? %>
+          <% if current_user.admin? %>
+            <%= link_to "管理者画面", rails_admin_path, class: "navbar-item" %>
+          <% end %>
             <%= link_to "プロフィール", user_path(current_user.id), class: "navbar-item" %>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "navbar-item" %>
             <%= link_to "募集作成", new_invite_path, class: "navbar-item" %>
