User詳細画面の修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,6 +49,7 @@
                       <%= link_to '募集編集', edit_invite_path(invite.id) %>
                 </div>
             <% end %>
+            <%= paginate @invites %>
         <% end %>
       </div>
       </div>
