--- a/app/views/invites/show.html.erb
+++ b/app/views/invites/show.html.erb
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <div class="columns is-centered">
+    <div class="columns is-centered mt-6">
       <div class="column is-6">
         <div class="box2">
           <p>
