ヘッダーの修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header>
       <nav class="navbar is-dark is-fixed-top">
         <div class="navbar-brand">
-          <p class="navbar-item">Vitoria-match</p>
+          <%= link_to "Vitoria-match", root_path, class: "navbar-item" %>
           <a class="navbar-burger burger" data-target="my-menu">
               <span aria-hidden="true"></span>
               <span aria-hidden="true"></span>
