--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -7,7 +7,8 @@
             Vitoria-match
           </div>
           <div class="content-sub-title">
-            チームの<strong class="feature">特徴</strong>で練習試合の対戦相手を探す
+            チームの<strong class="feature">特徴</strong>で練習試合の対戦相手を探す<br><br>
+            <%= link_to "募集一覧を見てみる", invites_path, class: "button is-info" %>
           </div>
         </div>
       </div>
