デザインの修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,8 +23,7 @@ body {
   font-family: sans-serif;
 }
 .alert{
-  background-color: #363636;
-  color: white;
+  color: black;
 }
 .box {
     background-color: white;
