--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <div class="columns is-centered mt-2">
+    <div class="columns is-centered">
       <div class="column is-9">
         <div class="top-picture">
           <div class="content-title">
