練習試合募集登録時の希望開始時刻の単位を修正

--- a/app/views/invites/_form.html.erb
+++ b/app/views/invites/_form.html.erb
@@ -34,7 +34,7 @@
             <%= form.label '希望開始日時', class: "label" %>
             <!-- <div class="select is-small">
             <div class="field is-horizontal"> -->
-            <%= form.datetime_select :match_day %>
+            <%= form.datetime_select :match_day, minute_step: 10 %>
             <!-- </div>
           </div> -->
         </div>
